ggplot2 0.9.1
----------------------------------------------------------------

MINOR FEATURES

* `ggstructure` and `ggorder`, which call `ggpcp`, no longer have a 
  `scale` argument since `ggpcp` does not have one.

* built in datasets have been checked to make sure they use characters,
  factors and ordered factors appropriately

* `geom_raster` and `annotation_raster` gain new `interpolate` argument for
  controlling whether or not rasters are interpolated

* Added `plot` as an alias for `print` for ggplot objects.

* Visual tests have been moved to /visual_test and modified to work with the
  vtest package. (Thanks to Winston Chang)

* `geom_dotplot`: now supports stacking. It uses `stackgroups = TRUE` instead
  of the usual position="stack", for technical reasons. It also will stack in
  the x direction when binning along the y axis. (Thanks to Winston Chang)

* `geom_rug` now allows control over which sides to put the rug lines, with
  the `sides` argument. (Thanks to Winston Chang)

* `annotation_logticks`: a new geom that adds tick marks on the inside of the
  plotting rectangle that have diminishing spacing for log-10 axes. (Thanks
  to Winston Chang)

* Coordinate expansion is now handled by an interaction of the scale and
  coord, rather than by the scale only. Also, the `wise` argument is no
  longer needed. (Thanks to Winston Chang and Kohske Takahashi)

BUG FIXES

* `facet_grid` no longer drops duplicate cases (Fixes #443)

* `munch_range` properly reports the x and y range. (Thanks to Winston Chang)

* `stat_bin2d` handles data with NA in the position variables. Error was
  triggered when scale was limited to a range smaller than the range of
  the data. (Bug reported by Tao Gao; diagnosed and fixed by Brian Diggs)

* `scale_*_identity` will now produce a legend when `guide = "legend"` and no
  breaks or labels are supplied (Fixes #453)

* `geom_map` now works with `coord_map` (Fixes #480)
