@@ -22,7 +22,7 @@
 #' p + geom_line()
 #' p + geom_line(aes(colour=mpg)) 
 ggpcp <- function(data, vars=names(data), ...) {
-  
+  .Deprecated()
   scaled <- as.data.frame(lapply(data[, vars], rescale01))
   data <- cunion(scaled, data)
   
@@ -56,6 +56,7 @@ ggpcp <- function(data, vars=names(data), ...) {
 #' ggfluctuation(table(movies$Action, movies$Comedy), type="colour")
 #' ggfluctuation(table(warpbreaks$breaks, warpbreaks$tension))
 ggfluctuation <- function(table, type="size", floor=0, ceiling=max(table$freq, na.rm=TRUE)) {
+  .Deprecated()
   if (is.table(table)) table <- as.data.frame(t(table))
   
   oldnames <- names(table)
@@ -123,6 +124,7 @@ ggfluctuation <- function(table, type="size", floor=0, ceiling=max(table$freq, n
 #' ggmissing(mmissing, order=FALSE, missing.only = FALSE)
 #' ggmissing(mmissing, avoid="dodge") + scale_y_sqrt()
 ggmissing <- function(data, avoid="stack", order=TRUE, missing.only = TRUE) {
+  .Deprecated()
   missings <- mapply(function(var, name) cbind(as.data.frame(table(missing=factor(is.na(var), levels=c(TRUE, FALSE), labels=c("yes", "no")))), variable=name), 
     data, names(data), SIMPLIFY=FALSE
   )
@@ -152,6 +154,7 @@ ggmissing <- function(data, avoid="stack", order=TRUE, missing.only = TRUE) {
 #' @examples
 #' ggstructure(mtcars)
 ggstructure <- function(data) {
+  .Deprecated()
   ggpcp(data) + 
     aes_string(y="ROWID", fill="value", x="variable") +
     geom_tile() +
@@ -164,6 +167,7 @@ ggstructure <- function(data) {
 #' @param data data set to plot
 #' @export
 ggorder <- function(data) {
+  .Deprecated()
   ggpcp(data) +
     aes_string(x="ROWID", group="variable", y="value") +
     facet_grid(. ~ variable) +
@@ -173,6 +177,7 @@ ggorder <- function(data) {
 
 # Distribution plot.
 ggdist <- function(data, vars=names(data), facets = . ~ .) {
+  .Deprecated()
   cat <- sapply(data[vars], is.factor)
   facets <- deparse(substitute(facets))
   
